test/test-files/analyzer/variables/error-variable-declared-before-referenced/exception.out
Semantic error in : ./test-files/analyzer/variables/error-variable-declared-before-referenced/source.spice:2:26:
Referenced undefined variable: Variable 'test' was referenced before declared

2  rintf("Output: %s", test);
                       ^^^^